# socatlord

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
socatlord/: __init__.py  operations.py  parse_config.py  run.py
socatlord/systemd/: socatlord.service
