# coding: utf-8
[metadata]
name = socatlord
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
keywords = socat, systemd, utility
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = A utility to manage all socats of yours
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1

